--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}print4health{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('styles') }}
         {% endblock %}
