--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -39,10 +39,20 @@ html{
 }
 
 .searchbar {
-  background-color: #f8f8f8;
+  background-color: $gray-bg;
   position: absolute;
   left: 50%;
   transform: translatex(-50%);
+}
+
+.footer {
+  width: 100%;
+  background-color: $gray-bg;
+  color: $primary;
+  text-align: center;
+  bottom: 0;
+  left: 0;
+  position: fixed;
 }
 
 @import '~bootstrap';
