--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -13,11 +13,13 @@ $dark: #343a40;
 $body-bg: #ffffff;
 $body-color: #000000;
 
+$gray-bg: #f9f9f9;
+
 //navbar
 
-$navbar-light-color: #000000;
+$navbar-light-color: #707070;
 $navbar-light-hover-color: $primary;
-$navbar-light-active-color: #0000ff;
+$navbar-light-active-color: #000000;
 
 
 //navbar navbar-expand-lg navbar-light bg-light
