--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -25,8 +25,12 @@ html{
 }
 
 .navbar-nav li {
-  display: inline-block;
-  float: none;
+    display: inline-block;
+    float: none;
+
+    a {
+        text-transform: uppercase;
+    }
 }
 
 .navbar-light {
