--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -21,6 +21,8 @@ $navbar-light-color: #707070;
 $navbar-light-hover-color: $primary;
 $navbar-light-active-color: #000000;
 
+$link-color: $dark;
+
 
 //navbar navbar-expand-lg navbar-light bg-light
 //nav-item
