#24 more thing list layout

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}print4health{% endblock %}</title>
+        <script src="https://kit.fontawesome.com/a44ba75d0b.js" crossorigin="anonymous"></script>
         {% block stylesheets %}
             {{ encore_entry_link_tags('styles') }}
         {% endblock %}
