--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -1,3 +1,15 @@
+body {
+    font-size: 14px;
+}
+
+h1 {
+    font-size: 1.8rem;
+}
+
+h2{
+    font-size: 1.6rem;
+}
+
 .mainarea {
     align-self: center;
 }
