adds better card styling on thing list

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2,5 +2,4 @@
 @import '~bootstrap';
 @import "partials/global";
 @import "partials/navbar";
-
-@import "partials/component-thing-list";
+@import "partials/components";
