--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}print4health{% endblock %}</title>
         <script src="https://kit.fontawesome.com/a44ba75d0b.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700&display=swap" rel="stylesheet">
         {% block stylesheets %}
             {{ encore_entry_link_tags('styles') }}
         {% endblock %}
