--- a/assets/scss/partials/_components.scss
+++ b/assets/scss/partials/_components.scss
@@ -33,3 +33,35 @@
         overflow: hidden;
     }
 }
+
+.Footer {
+    background-color: $gray-bg;
+    color: $primary;
+
+    a {
+        text-align: center;
+    }
+    .label {
+        display: block;
+    }
+
+    .fab,
+    .fas,
+    a img {
+        height: 32px;
+        width: auto;
+        font-size: 2rem;
+        display: block;
+    }
+
+    .link-wirvsvirus {
+        img {
+            //max-width: 150px;
+        }
+    }
+    .link-devpost {
+        img {
+            //max-width: 150px;
+        }
+    }
+}
