--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        {% include('analytics.html.twig') %}
         <meta charset="UTF-8">
         <title>{% block title %}print4health{% endblock %}</title>
         <script src="https://kit.fontawesome.com/a44ba75d0b.js" crossorigin="anonymous"></script>
