fix specs button on detail page

--- a/assets/scss/partials/_container.scss
+++ b/assets/scss/partials/_container.scss
@@ -27,8 +27,18 @@
             font-size: 3rem;
             transition: all 0.25s ease-out;
 
-            &:focus {
-                transform: scale(1.1);
+            &:not([disabled]) {
+                &:focus {
+                    transform: scale(1.1);
+                }
+            }
+        }
+
+        &:hover {
+            .btn {
+                &:not([disabled]) {
+                    transform: scale(1.1);
+                }
             }
         }
 
@@ -50,6 +60,7 @@
     .card {
         .card-header {
             cursor: pointer;
+
             &:hover {
                 background-color: $light;
             }
