added extra disclaimer

--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -5,7 +5,7 @@ $danger: #af0000;
 $secondary: #005a65;
 $success: #008d00;
 $warning: #e76800;
-$info: #dee2e6;
+$info: #b4cee6;
 $light: #e9ecef;
 $dark: #343a40;
 
