makes thing list responsive

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         {% include('analytics.html.twig') %}
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}print4health{% endblock %}</title>
         <script src="https://kit.fontawesome.com/a44ba75d0b.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700&display=swap" rel="stylesheet">
