--- a/assets/scss/partials/_components.scss
+++ b/assets/scss/partials/_components.scss
@@ -8,7 +8,7 @@
 
     &__image {
         width: 100%;
-        height: 15vw;
+        height: 200px;
         object-fit: cover;
 
         &--loading {
@@ -34,6 +34,16 @@
     }
 }
 
+.Search {
+    width: 50%;
+    margin: 0 auto map_get($spacers, 5);
+
+    @include media-breakpoint-down(sm) {
+        width: 100%;
+        margin-bottom: map_get($spacers, 4);
+    }
+}
+
 .Footer {
     background-color: $gray-bg;
     color: $primary;
@@ -41,6 +51,7 @@
     a {
         text-align: center;
     }
+
     .label {
         display: block;
     }
@@ -59,6 +70,7 @@
             //max-width: 150px;
         }
     }
+
     .link-devpost {
         img {
             //max-width: 150px;
