--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,5 +1,7 @@
 @import "partials/variables";
 @import '~bootstrap';
+@import '~leaflet';
 @import "partials/global";
 @import "partials/components";
 @import "partials/container";
+@import "partials/map";
