leaflet default icon webpack fix

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,7 @@
 @import "partials/variables";
 @import '~bootstrap';
 @import '~leaflet';
+@import '~leaflet-defaulticon-compatibility/dist/leaflet-defaulticon-compatibility.webpack.css';
 @import "partials/global";
 @import "partials/components";
 @import "partials/container";
