--- a/templates/analytics.html.twig
+++ b/templates/analytics.html.twig
@@ -5,4 +5,5 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-161705689-1', { 'anonymize_ip': true });
+  gtag('send', 'pageview');
 </script>
