commit to order frontend

--- a/assets/scss/partials/_map.scss
+++ b/assets/scss/partials/_map.scss
@@ -11,4 +11,9 @@
         background: transparent;
         border: none;
     }
+
+    .map-marker-order {
+        font-size: 14px;
+        width: 80px;
+    }
 }
