--- a/assets/scss/partials/_map.scss
+++ b/assets/scss/partials/_map.scss
@@ -14,6 +14,64 @@
 
     .map-marker-order {
         font-size: 14px;
-        width: 80px;
+        width: 31px;
+    }
+
+    .map-marker-order {
+        position: relative;
+
+        .quantity-wrapper {
+            opacity: 0.25;
+            position: absolute;
+            background-color: rgba(255, 255, 255, 0.25);
+            padding: 0.25rem 0.5rem;
+            text-align: center;
+            left: 10px;
+            bottom: -20px;
+            z-index: -1;
+        }
+
+        &:hover {
+            .quantity-wrapper {
+                opacity: 1;
+                background-color: rgba(255, 255, 255, 0.75);
+            }
+        }
+    }
+
+    .leaflet-popup-content {
+        max-width: 250px;
+        font-size: 0.9rem;
+
+        address {
+            font-size: 1rem;
+
+            h4 {
+                font-size: 1.1rem;
+            }
+
+            p {
+                margin: 0;
+            }
+        }
+
+        .label {
+            display: inline-block;
+            width: 80px;
+        }
+
+        a.btn {
+            font-family: 'Roboto', sans-serif !important;
+
+            &.btn-outline-secondary {
+                color: var(--secondary);
+
+                &:hover,
+                &:focus {
+                    color: var(--white);
+                }
+            }
+        }
+
     }
 }
