--- a/assets/scss/partials/_map.scss
+++ b/assets/scss/partials/_map.scss
@@ -68,6 +68,7 @@
 
                 &:hover,
                 &:focus {
+                    background-color: var(--secondary);
                     color: var(--white);
                 }
             }
