--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,22 @@
         {% block stylesheets %}
             {{ encore_entry_link_tags('styles') }}
         {% endblock %}
+        {% set description = 'Solidarisches Crowdproducing mittels 3D-Druck. Eine Plattform die Menschen aus dem Gesundheitswesen mit 3D Druckern verknüpft um den hohen Bedarf an med. Geräten und Helfern im Alltag zu stillen' %}
+        <meta name="description" content="{{ description }}">
+        <meta name="author" content="print4health">
+        <meta property="og:locale" content="de_DE" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="print4health - Helfen mit 3D-Druck" />
+        <meta property="og:description" content="{{ description }}" />
+        <meta property="og:url" content="{{ url('home') }}" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="627" />
+        <meta property="og:image" content="{{ url('home') }}print4health.jpg" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:description" content="{{ description }}" />
+        <meta name="twitter:title" content="print4health - Helfen mit 3D-Druck" />
+        <meta name="twitter:site" content="@Print4Health" />
+        <meta name="twitter:image" content="{{ url('home') }}print4health.jpg" />
     </head>
     <body>
         {% block body %}{% endblock %}
