#141 show first error validations in frontend

--- a/assets/scss/partials/_container.scss
+++ b/assets/scss/partials/_container.scss
@@ -62,3 +62,22 @@
         }
     }
 }
+
+.registration-form {
+    .form-check {
+        > input[type="checkbox"] {
+            margin-top: 0.5rem;
+        }
+    }
+
+    .invalid-feedback {
+        display: block;
+    }
+
+    small {
+        font-size: 1rem;
+    }
+    label {
+        margin-bottom: 0;
+    }
+}
