--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,26 @@
             {{ encore_entry_link_tags('styles') }}
         {% endblock %}
         {% set description = 'Solidarisches Crowdproducing mittels 3D-Druck. Eine Plattform die Menschen aus dem Gesundheitswesen mit 3D Druckern verknüpft um den hohen Bedarf an med. Geräten und Helfern im Alltag zu stillen' %}
+
+        <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/favicon_57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/favicon_60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/favicon_72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/favicon_76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/favicon_114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/favicon_120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/favicon_144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/favicon_152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/favicon_180.png">
+        <link rel="icon" type="image/png" href="images/favicon/favicon_36.png" sizes="36x36">
+        <link rel="icon" type="image/png" href="images/favicon/favicon_48.png" sizes="48x48">
+        <link rel="icon" type="image/png" href="images/favicon/favicon_72.png" sizes="72x72">
+        <link rel="icon" type="image/png" href="images/favicon/favicon_96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="images/favicon/favicon_144.png" sizes="144x144">
+        <link rel="icon" type="image/png" href="images/favicon/favicon_192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="images/favicon/favicon_16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="images/favicon/favicon_32.png" sizes="32x32">
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon/favicon.ico">
+
         <meta name="description" content="{{ description }}">
         <meta name="author" content="print4health">
         <meta property="og:locale" content="de_DE" />
