translations ajax fixes

--- a/templates/email/contact_form.html.twig
+++ b/templates/email/contact_form.html.twig
@@ -1,16 +1,12 @@
-Hi {{ name }},</br>
-</br>
-We confirm that we have received the following message from you:</br>
-</br>
-{{ message }}</br>
-</br>
-Contact Details:</br>
-{{ name }}</br>
-{{ tel }}</br>
-{{ email }}</br>
-</br>
-We will get back to you as soon as possible!</br>
-</br>
-Kind regards,</br>
-</br>
-The print4health team</br>
+Hallo {{ name }},<br>
+<br>
+Wir haben folgende Nachricht von Dir erhalten:<br>
+<br>
+{{ message }}<br>
+<br>
+Kontaktdaten:<br>
+{{ name }}<br>
+{{ tel }}<br>
+{{ email }}<br>
+<br>
+Wir melden uns so bald wie möglich bei Dir!
