--- a/templates/email/contact_form.html.twig
+++ b/templates/email/contact_form.html.twig
@@ -1,12 +1,12 @@
-Hallo {{ name }},<br>
+Hallo {{ contactRequest.name }},<br>
 <br>
 Wir haben folgende Nachricht von Dir erhalten:<br>
 <br>
-{{ message }}<br>
+{{ contactRequest.message }}<br>
 <br>
 Kontaktdaten:<br>
-{{ name }}<br>
-{{ tel }}<br>
-{{ email }}<br>
+{{ contactRequest.name }}<br>
+{{ contactRequest.tel }}<br>
+{{ contactRequest.email }}<br>
 <br>
 Wir melden uns so bald wie möglich bei Dir!
