contact form send

--- a/templates/email/contact_form.html.twig
+++ b/templates/email/contact_form.html.twig
@@ -6,7 +6,7 @@ Wir haben folgende Nachricht von Dir erhalten:<br>
 <br>
 Kontaktdaten:<br>
 {{ contactRequest.name }}<br>
-{{ contactRequest.tel }}<br>
+{{ contactRequest.phone }}<br>
 {{ contactRequest.email }}<br>
 <br>
 Wir melden uns so bald wie möglich bei Dir!
