#140 fix cypress test because of new email structure

--- a/templates/email/password_reset.html.twig
+++ b/templates/email/password_reset.html.twig
@@ -6,6 +6,6 @@
     <p>
         Bitte nutze folgenden Link um ein neues Passwort zu vergeben:<br />
         <br />
-        <a href="{{ url }}" target="_blank">{{ url }}</a>
+        <a class="reset-password" href="{{ url }}" target="_blank">{{ url }}</a>
     </p>
 {% endblock %}
