--- a/templates/email/email-base.html.twig
+++ b/templates/email/email-base.html.twig
@@ -378,7 +378,7 @@
                                 <!-- START MAIN CONTENT AREA -->
                                 <tr>
                                     <td class="wrapper">
-                                        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+                                        <table role="presentation" border="0" cellpadding="0" mycellspacing="0">
                                             <tr>
                                                 <td>
                                                     {% block content %}
