--- a/assets/scss/partials/_components.scss
+++ b/assets/scss/partials/_components.scss
@@ -96,24 +96,25 @@
         margin-top: 2rem;
 
         h6 {
-            padding: 0 0 1rem 0;
-            text-align: center;
+            padding: 1rem 0 0 1rem;
+            margin-bottom: 0;
+            text-align: left;
             display: inline-block;
-            vertical-align: bottom;
+            vertical-align: top;
             line-height: normal;
         }
     }
 
     &__headline {
-        height: 7rem;
-        line-height: 7rem;
-        text-align: center;
+        height: 4rem;
+        line-height: 4rem;
+        text-align: left;
     }
 
     &__value-row {
         p {
             padding: 0 1rem;
-            text-align: center;
+            text-align: left;
             display: inline-block;
             vertical-align: middle;
             line-height: normal;
@@ -125,14 +126,14 @@
         margin: 1rem 0;
         height: 7rem;
         line-height: 7rem;
-        text-align: center;
     }
 
     &__value-img {
         background-color: $gray-bg;
+        overflow: hidden;
 
         img {
-            max-height: 100%;
+            //max-height: 100%;
             max-width: 100%;
             width: auto;
         }
