#277 added useful information to requester-dashboard

--- a/assets/scss/partials/_components.scss
+++ b/assets/scss/partials/_components.scss
@@ -98,7 +98,6 @@
         h6 {
             padding: 1rem 0 0 1rem;
             margin-bottom: 0;
-            text-align: left;
             display: inline-block;
             vertical-align: top;
             line-height: normal;
@@ -112,24 +111,39 @@
     }
 
     &__value-row {
-        p {
-            padding: 0 1rem;
+        p{
             text-align: left;
             display: inline-block;
             vertical-align: middle;
             line-height: normal;
+            padding-inline-start: 0;
+        }
+        ul,
+        ol {
+            text-align: left;
+            vertical-align: middle;
+            line-height: normal;
+            margin-bottom: 0;
+            padding-inline-start: 0.5rem;
+            width: 100%;
+            li {
+                padding: 0.25rem 0;
+            }
         }
     }
 
     &__value {
         background-color: $white;
         margin: 1rem 0;
-        height: 7rem;
-        line-height: 7rem;
+        min-height: 7rem;
+        padding: 0 1rem;
+        display: flex;
+        align-items: center;
     }
 
     &__value-img {
-        background-color: $gray-bg;
+        //background-color: $gray-bg;
+        padding: 0;
         overflow: hidden;
 
         img {
@@ -137,6 +151,10 @@
             max-width: 100%;
             width: auto;
         }
+    }
+
+    .table {
+        margin-bottom: 0;
     }
 }
 
@@ -150,7 +168,7 @@
     height: 112px;
     line-height: 112px;
     text-align: center;
-    font-size: 3rem;
+    font-size: 1.5rem;
 }
 
 .bg-primary {
